@@ -1,6 +1,10 @@
 # ChangeLog file for MonetDB
 # This file is updated with Maddlog
 
+* Fri Dec 16 2016 Sjoerd Mullender <sjoerd@acm.org>
+- Removed automatic conversion of 32-bit OIDs to 64 bits on 64-bit
+  architectures.
+
 * Tue Dec 13 2016 Sjoerd Mullender <sjoerd@acm.org>
 - Removed functions OIDbase() and OIDnew().
 - Removed talign field from BAT descriptor.
